--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background-color: #bbcec8; /* Change to your preferred color */
+             border-top: 35px solid black;
         }
         h1 {
             font-size: 3em; /* Adjust size as needed */
@@ -35,6 +36,8 @@
         
         hr {
             margin-top: 20px; /* Adjust size as needed */
+              border: none;
+        border-top: 25px solid black;
         }
         .center {
             text-align: center;
@@ -99,6 +102,9 @@
     width: 30px; /* Adjust as needed */
     margin-left: 50px; /* Adjust as needed */
 }
+  a {
+        font-size: 20px;
+    }
     </style>
 </head>
 <body>
@@ -113,19 +119,17 @@
     <h2>Fresno, CA</h2>
    
 
-    <form action="/search" method="get">
-        <input type="search" name="q" placeholder="I am shopping for...">
-        <input type="submit" value="Search">
-    </form>
     <hr>
+
     <div class="center">
-        <a href="/home">Home</a> | 
-         <a href="/contact">About Us</a> |
-          <a href="/shop">Shop</a> |
-          <a href="/faq">FAQ</a> |
-        <a href="/contact">Contact Us</a>
+        <a href="../frontend/index.html">Home</a> | 
+        <a href="../frontend/aboutus.html">About Us</a> |
+        <a href="../frontend/shop">Shop</a> |
+        <a href="../frondend/faq">FAQ</a> |
+        <a href="../frontend/gallery">Gallery</a> |
+        <a href="../frontend/findus.html">Find Us</a>
     </div>
-    <br>
+<br>
      <div class="carousel">
         <img src="images/Owner-F.T Fresh Produce.png" alt="images/Owner-F.T Fresh Produce"  class="large-image">
         <button class="prev">&lt;</button>
