--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,14 @@ command to deploy code from terminal - firebase deploy
 Project Console: https://console.firebase.google.com/project/capstoneprojectftp/overview
 Hosting URL: https://capstoneprojectftp.web.app 
 Realtime database: https://console.firebase.google.com/project/capstoneprojectftp/overview?pli=1
+
+git pull
+make changes
+git stash
+git commit -m "update ReadME"
+git push https://github.com/BigQuotes19/CapstoneProject_F.T-FreshProduce.git
+
+
 -->
 <!DOCTYPE html>
 <html lang="en">
